# ColorLamp

./: README.md
new/ColorLampClient/ColorLampClient/: ColorLampPeripheral.swift  ContentView.swift  CustomSliderView.swift
new/ColorLampClient/ColorLampClient.xcodeproj/: project.pbxproj
new/ColorLampClient/ColorLampClient.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
new/ColorLampClient/ColorLampClient.xcodeproj/project.xcworkspace/xcuserdata/riccardopersello.xcuserdatad/: UserInterfaceState.xcuserstate
new/ColorLampClient/ColorLampClient.xcodeproj/xcuserdata/riccardopersello.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
new/ColorLampClient/ColorLampClient.xcodeproj/xcuserdata/riccardopersello.xcuserdatad/xcschemes/: xcschememanagement.plist
new/bluedroid/src/gatt_server/: custom_attributes.rs
new/firmware/: .gitignore  Cargo.toml  sdkconfig.defaults
new/firmware/.cargo/: config.toml
new/firmware/src/: main.rs
new/firmware/src/bluetooth/: gatt_handler.rs
new/firmware/src/lamp/: mod.rs
old/ColorLampClient/ColorLampClient/: BluetoothCoordinator.swift  ColorLampClientApp.swift  ContentView.swift
old/ColorLampClient/ColorLampClient.xcodeproj/project.xcworkspace/xcuserdata/riccardopersello.xcuserdatad/: UserInterfaceState.xcuserstate
old/firmware/: Cargo.toml  sdkconfig.defaults
old/firmware/src/: main.rs
old/firmware/src/bluetooth/: connection_values.rs  constants.rs  gap_handler.rs  gatt_handler.rs  indicate.rs  mod.rs
old/firmware/src/lamp/: mod.rs
