[package]
name = "firmware"
version = "0.1.0"
authors = ["Riccardo Persello <riccardo.persello@icloud.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = { version = "0.4.17", default-features = false }
esp-idf-sys = { version = "0.32.1", features = ["binstart", "native"] }
esp-idf-hal = "*"
esp-idf-svc = "*"
embedded-svc = { version = "0.23.1" }
rand = { version = "0.8.5" }
bluedroid = { path = "../bluedroid" }

[build-dependencies]
embuild = "0.31.2"
